--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap');
+
 body {
   background-color: rgb(250, 250, 250);
+  font-family: 'Roboto', serif;
 }
 
 .container {
