--- a/src/components/IntroCard/IntroCard.module.css
+++ b/src/components/IntroCard/IntroCard.module.css
@@ -1,7 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   padding: 1rem 0;
   margin: 1rem 0 !important;
   margin-top: 0 !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .content,
@@ -11,7 +19,46 @@
   display: inline-block;
 }
 
+.content {
+  height: 100%;
+}
+
 .imgDiv img {
   width: 100%;
   height: 100%;
+}
+
+.content h5 {
+  color: rgb(202, 68, 68);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.content h5 span {
+  color: #fff;
+  background-color: #dc3545;
+  margin-left: 5px;
+  padding: 4px;
+  border-radius: 5px;
+}
+
+.content h2 {
+  font-size: 4rem;
+  margin: 0.5rem 0;
+  line-height: 1.2;
+  font-weight: bolder;
+}
+
+.content h4 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 0.5rem 0;
+  text-align: right;
+}
+
+.content p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
 }
