--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
   justify-content: center;
-  width: 100%;
+  width: 80%;
+  margin: 2rem 0 !important;
+  margin-bottom: 5rem !important;
 }
