--- a/src/App.module.css
+++ b/src/App.module.css
@@ -17,3 +17,14 @@ body {
 .chevron {
   cursor: pointer;
 }
+
+@media (max-width: 770px) {
+  .container {
+    margin: 0 10% !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 2rem !important;
+  }
+}
