--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -1,7 +1,13 @@
 .container {
   display: flex;
   justify-content: center;
-  width: 80%;
+  width: 95%;
   margin: 2rem 0 !important;
   margin-bottom: 5rem !important;
+}
+
+@media (max-width: 770px) {
+  .container {
+    width: 100%;
+  }
 }
