--- a/src/components/IntroCard/IntroCard.module.css
+++ b/src/components/IntroCard/IntroCard.module.css
@@ -62,3 +62,17 @@
   font-weight: 400;
   line-height: 1.5;
 }
+
+@media (max-width: 770px) {
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .content,
+  .imgDiv {
+    width: 95%;
+  }
+}
