Updated with a new graph

--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -11,3 +11,11 @@
     width: 100%;
   }
 }
+
+.displayGraph {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40rem;
+  width: 100%;
+}
