Added routing for multipage support

--- a/src/css/Global.module.css
+++ b/src/css/Global.module.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   flex-direction: column;
   margin: 0 6rem !important;
-  margin-top: 2rem !important;
+  /* margin-top: 2rem !important; */
 }
 
 .chevron {
