--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -7,15 +7,18 @@
 }
 
 .imgDiv {
-  width: 25%;
+  width: 13rem;
   padding: auto;
   text-align: center;
+  margin-left: 1rem;
+  height: 4rem;
+  display: flex;
 }
 
 .headerImage {
-  width: 80%;
+  width: 100%;
   margin: auto;
-  margin: 0 2rem;
+  align-items: center;
 }
 
 .ulHeader {
@@ -50,7 +53,7 @@ li {
   display: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 660px) {
   .headerContainer {
     display: flex;
     flex-direction: column;
@@ -71,14 +74,8 @@ li {
   }
 
   .imgDiv {
-    width: 60%;
     padding: auto;
     text-align: center;
-  }
-
-  .headerImage {
-    width: 100%;
-    margin: auto;
   }
 
   .menu {
