Updated the styling of list section

--- a/src/css/India.module.css
+++ b/src/css/India.module.css
@@ -68,3 +68,19 @@
   text-align: right;
   color: #808080;
 }
+
+.newsContainer::-webkit-scrollbar {
+  width: 6px;
+  background-color: #fff;
+} 
+
+.newsContainer::-webkit-scrollbar-thumb {
+  background-color:	#A8A8A8;
+  border-radius: 2px;
+}
+
+.newsContainer::-webkit-scrollbar-track {
+  background-color: #fff;
+}
+
+
