Added the indian overview graph

--- a/src/css/India.module.css
+++ b/src/css/India.module.css
@@ -83,4 +83,12 @@
   background-color: #fff;
 }
 
+/* =================================================== */
 
+.displayGraph {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40rem;
+  width: 100%;
+}
