--- a/src/css/India.module.css
+++ b/src/css/India.module.css
@@ -92,3 +92,17 @@
   height: 40rem;
   width: 100%;
 }
+
+/* =================================================== */
+
+@media screen and (max-width: 660px) {
+  .container {
+    display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 40rem;
+  grid-gap: 1rem;
+  grid-template-areas: 
+  "news news news news"
+  "overview overview overview overview"
+  }
+}
