--- a/src/css/India.module.css
+++ b/src/css/India.module.css
@@ -29,6 +29,7 @@
   padding: 5px;
   border-bottom: 2px solid #D0D0D0;
   font-size: 1.2rem;
+  text-align: left;
 }
 
 /* =================================================== */
@@ -105,4 +106,12 @@
   "news news news news"
   "overview overview overview overview"
   }
+}
+
+/* =================================================== */
+
+.indiaOverview h4 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
