--- a/src/css/India.module.css
+++ b/src/css/India.module.css
@@ -84,6 +84,13 @@
   background-color: #fff;
 }
 
+.loadingDiv {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* =================================================== */
 
 .displayGraph {
