--- a/src/css/India.module.css
+++ b/src/css/India.module.css
@@ -182,3 +182,10 @@
 .graphFourth {
   grid-area: fourth;
 }
+
+.ddGraphTitle {
+  text-align: center;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: -25px;
+}
