--- a/src/css/IndianStates.module.css
+++ b/src/css/IndianStates.module.css
@@ -26,6 +26,13 @@
   grid-area: stateInfo;
 }
 
+.loadingDiv {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* ==================================================================================== */
 
 .indiaUpdateContainer {
@@ -83,8 +90,76 @@
 }
 
 .stateList {
-  height: 85%;
+  height: 80%;
   margin: 0 auto;
   margin-top: 1rem;
+  padding: 1rem;
   width: 95%;
+}
+
+table{
+  width:100%;
+  table-layout: fixed;
+}
+
+.tableHeader {
+  background-color: #398B93;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  box-shadow: 0px -4px 10px 4px rgb(0,0,0,0.14);
+}
+
+.tableBody {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: 0px 0px 10px 4px rgb(0,0,0,0.14);
+  overflow-x:auto;
+  height: 90%;
+}
+
+th{
+  padding: 20px 15px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 14px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+td{
+  padding: 15px;
+  text-align: left;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 14px;
+  color: #000;
+  border-bottom: solid 1px rgba(255,255,255,0.1);
+  margin: 0;
+}
+
+tr {
+  margin: 0;
+}
+
+.stateRow:hover {
+  cursor: pointer;
+  background-color: rgba(0,0,0,0.1);
+}
+
+.tableBody table:nth-child(even) {
+  background-color: #398B93;
+}
+
+
+/* for custom scrollbar for webkit browser*/
+
+::-webkit-scrollbar {
+  width: 6px;
+  border-radius: 3px;
+} 
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+} 
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
 }
