--- a/src/css/IndianStates.module.css
+++ b/src/css/IndianStates.module.css
@@ -165,7 +165,9 @@ tr {
 } 
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 3px;
 } 
 ::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 3px;
 }
