--- a/src/css/IndianStates.module.css
+++ b/src/css/IndianStates.module.css
@@ -3,11 +3,27 @@
   padding: 1rem;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: 50rem;
+  grid-auto-rows: 40rem;
   grid-gap: 2rem;
   grid-template-areas: 
   "indiaMap indiaMap indiaMap indiaMap indiaInfo indiaInfo"
   "stateMap stateMap stateMap stateMap stateInfo stateInfo"
+}
+
+@media screen and (max-width: 900px) {
+  .container {
+    margin: 0rem;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 40rem;
+    grid-gap: 2rem;
+    grid-template-areas: 
+    "indiaMap indiaMap indiaMap"
+    "indiaInfo indiaInfo indiaInfo"
+    "stateMap stateMap stateMap"
+    "stateInfo stateInfo stateInfo"
+  }
 }
 
 .indiaMap {
@@ -184,48 +200,45 @@ tr {
 
 .graphListParentDiv{
   height: 100%;
+  overflow-x: auto;
 }
 
 .graphsListContainer {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+  align-items: center; */
   height: 95%;
+}
+
+.boxSizing {
+  width: 95%;
+  height: 10rem;
+  margin: 1rem;
+  border-radius: 5px;
 }
 
 .confirmedDiv {
   background: rgba(255,7,58,.12549);
   color: #ff073a;
-  width: 95%;
-  height: 20%;
-  margin: 1rem;
-  border-radius: 10px;
 }
 
 .activeDiv {
   background: rgba(0,123,255,.0627451);
   color: #007bff;
-  width: 95%;
-  height: 20%;
-  margin: 1rem;
-  border-radius: 10px;
 }
 
 .deceasedDiv {
   background: rgba(108,117,125,.0627451);
   color: #6c757d;
-  width: 95%;
-  height: 20%;
-  margin: 1rem;
-  border-radius: 10px;
 }
 
 .recoveredDiv {
   background: rgba(40,167,69,.12549);
   color: #28a745;
-  width: 95%;
-  height: 20%;
-  margin: 1rem;
-  border-radius: 10px;
+}
+
+.testedDiv {
+  background: rgba(32,26,162,.12549);
+  color: rgba(32,26,162,.866667);
 }
