--- a/src/css/IndianStates.module.css
+++ b/src/css/IndianStates.module.css
@@ -186,11 +186,6 @@ tr {
   background-color: rgba(0,0,0,0.1);
 }
 
-/* .selectedStateRow:hover {
-  cursor: pointer;
-  background-color: rgba(0,0,0,0.1);
-} */
-
 
 /* for custom scrollbar for webkit browser*/
 
@@ -203,6 +198,19 @@ tr {
   border-radius: 3px;
 } 
 ::-webkit-scrollbar-thumb:horizontal {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  border-radius: 3px;
+} 
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 3px;
+} 
+::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
   border-radius: 3px;
 }
@@ -256,5 +264,52 @@ tr {
 
 
 #districtList {
-  height: 100%; 
+  height: 97%; 
+}
+
+
+
+
+
+
+.zoneContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 90%;
+  width: 100%;
+  overflow-y: scroll;
+}
+
+.zoneContainer div {
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  
+}
+
+.greenZone {
+  background: rgba(40,167,69,.12549);
+  color: #28a745;
+  display: inline;
+  margin: 10px;
+  padding: 10px;
+}
+
+.orangeZone {
+  background: rgba(255, 189, 7, 0.125);
+  color: #ffb007;
+  display: inline;
+  margin: 10px;
+  padding: 10px;
+}
+
+.redZone {
+  background: rgba(255,7,58,.12549);
+  color: #ff073a;
+  display: inline;
+  margin: 10px;
+  padding: 10px;
 }
