fix eslint and prettier errors

--- a/src/css/Global.module.css
+++ b/src/css/Global.module.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap");
 
 body {
   background-color: rgba(250, 246, 239, 0.623);
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .container {
