--- a/src/css/IndianStates.module.css
+++ b/src/css/IndianStates.module.css
@@ -5,9 +5,9 @@
   grid-template-columns: repeat(6, 1fr);
   grid-auto-rows: 40rem;
   grid-gap: 2rem;
-  grid-template-areas: 
-  "indiaMap indiaMap indiaMap indiaMap indiaInfo indiaInfo"
-  "stateMap stateMap stateMap stateMap stateInfo stateInfo"
+  grid-template-areas:
+    "indiaMap indiaMap indiaMap indiaMap indiaInfo indiaInfo"
+    "stateMap stateMap stateMap stateMap stateInfo stateInfo";
 }
 
 @media screen and (max-width: 900px) {
@@ -18,11 +18,11 @@
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 40rem;
     grid-gap: 2rem;
-    grid-template-areas: 
-    "indiaMap indiaMap indiaMap"
-    "indiaInfo indiaInfo indiaInfo"
-    "stateMap stateMap stateMap"
-    "stateInfo stateInfo stateInfo"
+    grid-template-areas:
+      "indiaMap indiaMap indiaMap"
+      "indiaInfo indiaInfo indiaInfo"
+      "stateMap stateMap stateMap"
+      "stateInfo stateInfo stateInfo";
   }
 }
 
@@ -67,7 +67,7 @@
 }
 
 @media screen and (max-width: 660px) {
-  .indiaUpdateContainer{
+  .indiaUpdateContainer {
     overflow-x: auto;
   }
 
@@ -94,31 +94,30 @@
 }
 
 .confirmed {
-  background: rgba(255,7,58,.12549);
+  background: rgba(255, 7, 58, 0.12549);
   color: #ff073a;
 }
 
 .active {
-  background: rgba(0,123,255,.0627451);
+  background: rgba(0, 123, 255, 0.0627451);
   color: #007bff;
 }
 
 .deaths {
-  background: rgba(108,117,125,.0627451);
+  background: rgba(108, 117, 125, 0.0627451);
   color: #6c757d;
 }
 
 .recovered {
-  background: rgba(40,167,69,.12549);
+  background: rgba(40, 167, 69, 0.12549);
   color: #28a745;
 }
 
 /* ==================================================================================== */
 
-
-.box2{
+.box2 {
   background: #fff;
-  box-shadow: 0px 4px 10px 4px rgb(0,0,0,0.14);
+  box-shadow: 0px 4px 10px 4px rgb(0, 0, 0, 0.14);
   text-align: center;
   border-radius: 10px;
 }
@@ -131,29 +130,29 @@
   width: 95%;
 }
 
-table{
-  width:100%;
+table {
+  width: 100%;
   table-layout: fixed;
   border-spacing: 0;
 }
 
 .tableHeader {
-  background-color: #398B93;
+  background-color: #398b93;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  box-shadow: 0px -4px 10px 4px rgb(0,0,0,0.14);
+  box-shadow: 0px -4px 10px 4px rgb(0, 0, 0, 0.14);
 }
 
 .tableBody {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  box-shadow: 0px 0px 10px 4px rgb(0,0,0,0.14);
+  box-shadow: 0px 0px 10px 4px rgb(0, 0, 0, 0.14);
   /* overflow-x:scroll; */
   overflow-y: scroll;
   height: 90%;
 }
 
-th{
+th {
   padding: 20px 15px;
   text-align: left;
   font-weight: 500;
@@ -162,14 +161,14 @@ th{
   text-transform: uppercase;
 }
 
-td{
+td {
   padding: 15px;
   text-align: left;
-  vertical-align:middle;
+  vertical-align: middle;
   font-weight: 300;
   font-size: 14px;
   color: #000;
-  border-bottom: solid 1px rgba(255,255,255,0.1);
+  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
   margin: 0;
 }
 
@@ -179,45 +178,44 @@ tr {
 
 .stateRow:hover {
   cursor: pointer;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .selectedStateRow {
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
-
 
 /* for custom scrollbar for webkit browser*/
 
 ::-webkit-scrollbar:horizontal {
   width: 6px;
   border-radius: 3px;
-} 
+}
 ::-webkit-scrollbar-track:horizontal {
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
-} 
+}
 ::-webkit-scrollbar-thumb:horizontal {
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
 }
 
 ::-webkit-scrollbar {
   width: 6px;
   border-radius: 3px;
-} 
+}
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
-} 
+}
 ::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
 }
 
 /* ==================================================================================== */
 
-.graphListParentDiv{
+.graphListParentDiv {
   height: 100%;
   overflow-x: auto;
 }
@@ -238,39 +236,33 @@ tr {
 }
 
 .confirmedDiv {
-  background: rgba(255,7,58,.12549);
+  background: rgba(255, 7, 58, 0.12549);
   color: #ff073a;
 }
 
 .activeDiv {
-  background: rgba(0,123,255,.0627451);
+  background: rgba(0, 123, 255, 0.0627451);
   color: #007bff;
 }
 
 .deceasedDiv {
-  background: rgba(108,117,125,.0627451);
+  background: rgba(108, 117, 125, 0.0627451);
   color: #6c757d;
 }
 
 .recoveredDiv {
-  background: rgba(40,167,69,.12549);
+  background: rgba(40, 167, 69, 0.12549);
   color: #28a745;
 }
 
 .testedDiv {
-  background: rgba(32,26,162,.12549);
-  color: rgba(32,26,162,.866667);
+  background: rgba(32, 26, 162, 0.12549);
+  color: rgba(32, 26, 162, 0.866667);
 }
-
 
 #districtList {
-  height: 97%; 
+  height: 97%;
 }
-
-
-
-
-
 
 .zoneContainer {
   display: flex;
@@ -287,11 +279,10 @@ tr {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  
 }
 
 .greenZone {
-  background: rgba(40,167,69,.12549);
+  background: rgba(40, 167, 69, 0.12549);
   color: #28a745;
   display: inline;
   margin: 10px;
@@ -307,7 +298,7 @@ tr {
 }
 
 .redZone {
-  background: rgba(255,7,58,.12549);
+  background: rgba(255, 7, 58, 0.12549);
   color: #ff073a;
   display: inline;
   margin: 10px;
