--- a/src/css/Cards.module.css
+++ b/src/css/Cards.module.css
@@ -5,8 +5,7 @@
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 12rem;
   grid-gap: 1rem;
-  grid-template-areas: 
-  "first second third"
+  grid-template-areas: "first second third";
 }
 
 @media screen and (max-width: 660px) {
@@ -16,10 +15,10 @@
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: 10rem;
     grid-gap: 1rem;
-    grid-template-areas: 
-    "first"
-    "second"
-    "third"
+    grid-template-areas:
+      "first"
+      "second"
+      "third";
   }
 
   .card {
@@ -29,21 +28,18 @@
 
 .first .card {
   grid-area: first;
-  
 }
 
-.second .card{
+.second .card {
   grid-area: second;
-  
 }
 
 .third .card {
   grid-area: third;
-  
 }
 
 .card {
-  background-color: #00688B;
+  background-color: #00688b;
   color: #fff;
   width: 100%;
   display: flex;
@@ -51,7 +47,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 13px;
-  box-shadow: 0px 4px 10px 4px rgb(0,0,0,0.34);
+  box-shadow: 0px 4px 10px 4px rgb(0, 0, 0, 0.34);
 }
 
 .title {
@@ -68,4 +64,3 @@
   margin: 10px 0 0 0;
   font-size: 0.7rem;
 }
-
